--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
        | relative_url }}">
 
   <!-- Your custom overrides -->
-  {% include head-custom.html %}
+  {% include custom-head.html %}
 </head>
   <body>
     <div class="wrapper">
