--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,23 +1,1 @@
-<!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-US" }}">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  {% seo %}
-
-  <!-- Minima’s main CSS -->
-  <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" 
-       | append: site.github.build_revision 
-       | relative_url }}">
-
-  <!-- THIS is the injection point for *any* extra_head -->
-  {{ page.extra_head }}
-
-</head>
-<body>
-  {{ content }}
-  <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
-</body>
-</html>
+<link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
